Fixed alignment of sort filter #3742 (#2802)

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/hearings/pages/employee/SummonsNWarrantsModal.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/hearings/pages/employee/SummonsNWarrantsModal.scss
@@ -94,4 +94,9 @@
       font-weight: 900;
     }
 }
-  
+
+.review-summon-warrant 
+  .label-field-pair 
+  .select-signature-main {
+    margin-top: 14px;
+}
